--- a/Client/Pages/MealRecipe.razor
+++ b/Client/Pages/MealRecipe.razor
@@ -2,9 +2,9 @@
 @using ChefGPT.Shared
 @using System.Text.Json
 @using System.Web
+@*@inject JSRuntime Javascript*@
 @inject HttpClient Http
 @inject NavigationManager Navigation
-@inject JSRuntime Js
 
 @if (loaded == true)
 {
@@ -18,9 +18,9 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <p class="">@recipe.summary</p>
-                        <div class="text-end">
+                        @*<div class="text-end">
                             <button class="btn btn-success d-print-none" @onclick="Print" >Print</button>
-                        </div>
+                        </div>*@
                         <hr>
                         <p><span class="fw-bold text-pink">PRO TIP: </span>AI-generated recipes can be unpredictable.  If it's not food don't eat it, otherwise enjoy!</p>
                         <div class="text-center ">
@@ -116,8 +116,8 @@ else
         }
     }
 
-    private async Task Print()
-    {
-        await Js.InvokeVoidAsync("printInvoke");
-    }
+    //private async Task Print()
+    //{
+        //await Javascript.InvokeVoidAsync("printInvoke");
+    //}
 }
