loader spinner added

--- a/Client/Pages/MealIdeas.razor
+++ b/Client/Pages/MealIdeas.razor
@@ -4,7 +4,7 @@
 @inject NavigationManager navigationManager;
 @inject HttpClient Http;
 
-@if (loaded = true)
+@if (loaded == true)
 {
 <div class="container mt-5">
     <h2 class="text-pink">Choose a Meal to Make</h2>
