--- a/Client/Shared/ChefSpinner.razor
+++ b/Client/Shared/ChefSpinner.razor
@@ -1,8 +1,8 @@
 ﻿<div class="h-100 d-flex flex-column align-items-center justify-content-center">
     <div class="text-center" height="200">
-        <img src="~/images/ChefByte.png" class="chefByte"/>
+        <img src="~/images/ChefByte.png" height="200"/>
     </div>
-    <div class="loader">Loading...</div>
+    <div class="loader"></div>
 </div>
 
 @code {
