--- a/Client/Shared/ChefSpinner.razor
+++ b/Client/Shared/ChefSpinner.razor
@@ -1,6 +1,6 @@
 ﻿<div class="h-100 d-flex flex-column align-items-center justify-content-center">
-    <div class="text-center" height="200">
-        <img src="~/images/ChefByte.png" height="200"/>
+    <div class="text-center">
+        <h2 class="text-pink">COOKING UP SOMETHING GOOD...</h2>
     </div>
     <div class="loader"></div>
 </div>
