css test to add blur effect to index bg on mobile

--- a/Client/Pages/Index.razor.css
+++ b/Client/Pages/Index.razor.css
@@ -20,6 +20,15 @@
     height: 100%;
 }
 
+@media (max-width: 991px) {
+    .pagestyle {
+        display: flex;
+        flex-direction: column;
+        backdrop-filter: blur(2px) brightness(40%);
+        height: 100%;
+    }
+}
+
 main {
     flex: 1 0 auto;
 }
