--- a/Client/Pages/MealRecipe.razor
+++ b/Client/Pages/MealRecipe.razor
@@ -22,7 +22,7 @@
                             <button class="btn btn-success d-print-none" @onclick="Print" >Print</button>
                         </div>*@
                         <hr>
-                        <p><span class="fw-bold text-pink">PRO TIP: </span>Don't forget to print the recipe if it's a keeper! You may not get the same results twice.</p>
+                        <p><span class="fw-bold text-pink">PRO TIP: </span>AI-generated meals can be unpredictable. If it's not food don't eat it, otherwise enjoy!</p>
                         <div class="text-center ">
                             <img class="" src="/images/ChefByteFullPurple.png" width="110" />
                         </div>
