--- a/Client/Shared/TopNavMenu.razor
+++ b/Client/Shared/TopNavMenu.razor
@@ -1,7 +1,7 @@
 ﻿
 <nav class="navbar navbar-expand-lg sticky-top topNavBg d-print-none">
     <div class="container-fluid">
-        <a class="navbar-brand mt-1" href="#"><h4>Chef <span class="text-pink">Byte<\span></h4></a>
+        <a class="navbar-brand mt-1" href="#"><h5>Chef <span class="text-pink">Byte</span></h5></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
