--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -17,7 +17,7 @@
                 <img src="images/ChefByteWhiteCropped.png" height="340" />
             </div>
             <div>
-                <h3 class="text-light text-center mt-3">Create new meals with<br />an <span class="text-pink">AI-powered</span> chef</h3>
+                <h3 class="text-light text-center mt-3">Create epic meals with<br />an <span class="text-pink">AI-powered</span> chef</h3>
             </div>
             <div class="text-center mt-4">
                 <a href="/createmeal" class="btn btn-outline-light btn-lg">Get Started</a>
