--- a/Client/Pages/CreateMeal.razor
+++ b/Client/Pages/CreateMeal.razor
@@ -48,7 +48,7 @@
                                     @foreach (var item in ingredients)
                                     {
                                         <tr>
-                                            <td>
+                                            <td class="fw-bold">
                                                 @item.Description
                                             </td>
                                             <td class="text-end pe-3">
