--- a/Client/Pages/Index.razor.css
+++ b/Client/Pages/Index.razor.css
@@ -13,12 +13,13 @@
     font-size: 1.2rem;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 480px) {
     .page {
         background-image: url(images/cbMobileBg.PNG);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
+        background: linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8));
         overflow: hidden;
         display: flex;
         flex-direction: column;
