--- a/Client/Shared/RecipeSpinner.razor
+++ b/Client/Shared/RecipeSpinner.razor
@@ -1,6 +1,6 @@
 ﻿<div class="h-100 d-flex flex-column align-items-center justify-content-center">
     <div class="text-center">
-        <h2 class="text-pink">APPLYING FINISHING TOUCHES...</h2>
+        <h2 class="text-pink">APPLYING THE FINISHING TOUCHES...</h2>
     </div>
     <div class="loader"></div>
 </div>
