--- a/Client/Pages/MealRecipe.razor
+++ b/Client/Pages/MealRecipe.razor
@@ -66,7 +66,7 @@ else
     public int Index { get; set; }
 
     [CascadingParameter]
-    private RecipeState recipeState { get; set; }
+    private RecipeState? recipeState { get; set; }
 
     private string? title;
     private string recipeImageUrl = string.Empty;
