@using JSInterop added

--- a/Client/Pages/MealRecipe.razor
+++ b/Client/Pages/MealRecipe.razor
@@ -2,7 +2,9 @@
 @using ChefGPT.Shared
 @using System.Text.Json
 @using System.Web
-@using Microsoft.JSInterop
+@using Microsoft.JSInterop.Implementation
+@using Microsoft.JSInterop.Infrastructure
+@using Microsoft.JSInterop.WebAssembly
 @inject JSRuntime Javascript
 @inject HttpClient Http
 @inject NavigationManager Navigation
