MealRecipe.razor: updated JSRuntime to IJSRuntime

--- a/Client/Pages/MealRecipe.razor
+++ b/Client/Pages/MealRecipe.razor
@@ -5,7 +5,9 @@
 @using Microsoft.JSInterop.Implementation
 @using Microsoft.JSInterop.Infrastructure
 @using Microsoft.JSInterop.WebAssembly
-@inject JSRuntime Javascript
+@using Microsoft.JSInterop
+
+@inject IJSRuntime Javascript
 @inject HttpClient Http
 @inject NavigationManager Navigation
 
