CreateMeal.razor: added clear btn and methods

--- a/Client/Pages/MealRecipe.razor
+++ b/Client/Pages/MealRecipe.razor
@@ -24,12 +24,12 @@
                     <div class="col-lg-8">
                         <p class="">@recipe?.summary</p>
                         <div class="text-end">
-                            <button class="btn btn-success d-print-none" @onclick="Print" >Print Recipe</button>
+                            <button class="btn btn-primary d-print-none" @onclick="Print" >Print Recipe</button>
                         </div>
                         <hr>
                         <p><span class="fw-bold text-pink">PRO TIP: </span>AI-generated meals can be unpredictable. If it's not food don't eat it, otherwise enjoy!</p>
                         <div class="text-center ">
-                            <img class="" src="/images/ChefByteFullPurple.png" width="110" />
+                            <img class="d-print-none" src="/images/ChefByteFullPurple.png" width="110" />
                         </div>
                     </div>
                     <div class="col-lg-4"></div>
