--- a/Client/Pages/CreateMeal.razor
+++ b/Client/Pages/CreateMeal.razor
@@ -33,7 +33,7 @@
                     </div>
                     <div class="col-12 mt-4">
                         <button class="btn btn-outline-dangerous" @onclick="AddIngredient">Add</button>
-                        @*<button class="btn btn-outline-dangerous" >Clear</button>*@
+                        <button class="btn btn-dangerous" @onclick="RemoveAll">Clear</button>
 
                     </div>
                     <div class="col-12 mt-3">
@@ -63,8 +63,8 @@
                         </div>
                     </div>
                     <div class="col-12">
-                        <button class="btn btn-outline-primary rounded" @onclick="HandleSubmit">
-                            Make A Meal!
+                        <button class="btn btn-primary rounded" @onclick="HandleSubmit">
+                            Make A Meal
                         </button>
                     </div>
                 </div>
@@ -124,6 +124,13 @@
                 }
             );
         }
+
+        //CLEAR THE TEXT FIELD
+        meal.ingredient = string.Empty;
+    }
+    private void RemoveAll()
+    {
+        ingredients.Clear();    
     }
 
     <!--DELETE METHOD-->
