--- a/Client/Pages/CreateMeal.razor
+++ b/Client/Pages/CreateMeal.razor
@@ -33,7 +33,7 @@
                     </div>
                     <div class="col-12 mt-4">
                         <button class="btn btn-outline-dangerous" @onclick="AddIngredient">Add</button>
-                        <button class="btn btn-dangerous" @onclick="RemoveAll">Clear</button>
+                        <button class="btn btn-dangerous" @onclick="RemoveAll">Clear Ingredient List</button>
 
                     </div>
                     <div class="col-12 mt-3">
@@ -73,7 +73,7 @@
         <div class="col-12 col-lg-6">
             <p class="pe-5 me-lg-5 ms-lg-5 ps-5 mt-lg-5 pt-lg-2 text-left"><span class="fw-bold text-pink">PRO TIP: </span>AI-generated recipes are delicious and inventive.  Use your imagination and try something new!</p>
             <div class="text-center ">
-                <img class="" src="/images/ChefByteFullPurple.png" width="110" />
+                <img class="" src="/images/ChefByteFullPurple.png" width="120" />
             </div>
         </div>
     </div>
