--- a/Client/wwwroot/css/app.css
+++ b/Client/wwwroot/css/app.css
@@ -42,8 +42,8 @@ a, .btn-link {
 
 .btn-primary {
     color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
+    background-color: var(--bs-primary);
+    border-color: var(--bs-primary);
 }
 
 /*.btn-light {
