font size update

--- a/Client/Shared/TopNavLayout.razor
+++ b/Client/Shared/TopNavLayout.razor
@@ -4,7 +4,7 @@
 <main>
     @Body
 </main>
-<footer class="p-3 text-center text-dark bg-purple mt-3">
+<footer class="p-3 text-center text-dark bg-purple mt-3 d-print-none">
     &copy: 2023 Steve Szymanski
 </footer>
 
