--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -27,7 +27,7 @@
         <footer class="text-center text-light">
             <div class="row">
                 <div class="col-lg"></div>
-                <div class="col opacity-75 small-footer-text">
+                <div class="col opacity-75 small-footer-text mt-1">
                     &copy; Steve Szymanski 2023
                 </div>
                 <div class="col text-end text-light me-2">
