text changed on index.razor page

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -17,7 +17,7 @@
                 <img src="images/ChefByteWhiteCropped.png" height="340" />
             </div>
             <div>
-                <h2 class="text-light text-center mt-3">Make epic meals with<br />your <span class="text-pink">AI-powered</span> chef</h2>
+                <h2 class="text-light text-center mt-3">Make meals epic with<br />your <span class="text-pink">AI-powered</span> chef</h2>
             </div>
             <div class="text-center mt-4">
                 <a href="/createmeal" class="btn btn-outline-light btn-lg">Get Started</a>
