--- a/Client/Pages/MealIdeas.razor
+++ b/Client/Pages/MealIdeas.razor
@@ -68,7 +68,7 @@ else
 
         RecipeParms recipeParms = new RecipeParms()
             {
-                MeatTime = rState.MealTime,
+                MealTime = rState.MealTime,
                 Ingredients = rState.Ingredients
             };
 
