--- a/Client/Pages/CreateMeal.razor
+++ b/Client/Pages/CreateMeal.razor
@@ -33,7 +33,7 @@
                     </div>
                     <div class="col-12 mt-4">
                         <button class="btn btn-outline-dangerous" @onclick="AddIngredient">Add</button>
-                        <button class="btn btn-dangerous" @onclick="RemoveAll">Clear Ingredient List</button>
+                        <button class="btn btn-dangerous text-purple" @onclick="RemoveAll">Clear Ingredient List</button>
 
                     </div>
                     <div class="col-12 mt-3">
