--- a/Client/Shared/TopNavMenu.razor
+++ b/Client/Shared/TopNavMenu.razor
@@ -3,7 +3,7 @@
     <div class="container-fluid">
         <a class="navbar-brand mt-2" href="#"><h5 class="text-purple">Chef <span class="text-pink">Byte</span></h5></a>
         <button class="navbar-toggler text-purple" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon text-purple"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
