--- a/Client/Shared/TopNavMenu.razor
+++ b/Client/Shared/TopNavMenu.razor
@@ -2,8 +2,8 @@
 <nav class="navbar navbar-expand-lg sticky-top topNavBg d-print-none">
     <div class="container-fluid">
         <a class="navbar-brand mt-2" href="#"><h5 class="text-purple">Chef <span class="text-pink">Byte</span></h5></a>
-        <button class="navbar-toggler text-purple" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon text-purple"></span>
+        <button class="navbar-toggler bg-purple" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon bg-purple"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
