--- a/Client/Pages/MealIdeas.razor
+++ b/Client/Pages/MealIdeas.razor
@@ -13,7 +13,7 @@
         {
             <button @onclick="() => GetRecipe(idea.index)" class="list-group list-group-item-action list-group-item-warning p-2">
                 <div class="d-flex w-100 justify-content-sm-between">
-                    <h2 class="mb-1 fw-bold">@idea.title</h2>
+                    <h2 class="mb-1 fw-bold text-purple">@idea.title</h2>
                 </div>
                     <p class="mb-1">@idea.description</p>
             </button>
