--- a/Client/Pages/MealRecipe.razor
+++ b/Client/Pages/MealRecipe.razor
@@ -24,7 +24,7 @@
                             <button class="btn btn-primary d-print-none" @onclick="Print">Print Recipe</button>
                         </div>
                         <hr>
-                        <p><span class="fw-bold text-pink">PRO TIP: </span>AI-generated meals may be unpredictable. If it's not food don't eat it, otherwise enjoy!</p>
+                        <p><span class="fw-bold text-pink">PRO TIP: </span>AI-generated content can be unpredictable. If it's not food don't eat it, otherwise enjoy!</p>
                         <div class="text-center ">
                             <img class="d-print-none" src="/images/ChefByteTalkingHead.png" width="150" />
                         </div>
@@ -43,7 +43,7 @@
                     }
                 </ul>
             </div>
-            <div class="col mt-3">
+            <div class="col mt-3 pe-4 pe-lg-2">
                 <h2>Instructions</h2>
                 <ul>
                     @foreach (var item in recipe!.instructions!)
@@ -62,21 +62,23 @@ else
 
 @code {
 
-    private bool loaded = false;
 
     [CascadingParameter]
-    private RecipeState? recipeState { get; set; }
+    private RecipeState? rState { get; set; }
 
     [Parameter]
     public int Index { get; set; }
 
-    private string? title;
+    //This code should be used in every Page
+    bool loaded = false;
+
+    private string title;
     private string recipeImageUrl = string.Empty;
-    private Recipe? recipe;
+    private Recipe recipe;
 
     protected override void OnInitialized()
     {
-        loaded = false;
+        bool loaded = false;
         GetRecipe();
     }
 
@@ -84,17 +86,15 @@ else
     {
         string baseuri = "Recipe/GetRecipe";
 
-        if (recipeState is not null)
+        if (rState is not null)
         {
             try
             {
-                title = recipeState.Ideas.FirstOrDefault(i => i.index == Index)?.title;
-                loaded = true;
-
+                title = rState.Ideas.FirstOrDefault(i => i.index == Index).title;
                 RecipeParms recipeParms = new RecipeParms()
                     {
-                        MealTime = recipeState.MealTime,
-                        Ingredients = recipeState.Ingredients,
+                        MealTime = rState.MealTime,
+                        Ingredients = rState.Ingredients,
                         SelectedIdea = title
                     };
 
@@ -109,7 +109,7 @@ else
 
                 responseRecipe.EnsureSuccessStatusCode();
 
-                recipe = (await responseRecipe.Content.ReadFromJsonAsync<Recipe>())!;
+                recipe = await responseRecipe.Content.ReadFromJsonAsync<Recipe>();
 
                 loaded = true;
                 StateHasChanged();
