--- a/Client/Pages/MealRecipe.razor
+++ b/Client/Pages/MealRecipe.razor
@@ -103,7 +103,7 @@ else
                 //get recipe image
                 HttpResponseMessage responseImage = await Http.GetAsync($"Recipe/getRecipeImage?title={HttpUtility.UrlEncode(title)}");
                 var recipeImage = await responseImage.Content.ReadFromJsonAsync<RecipeImage>();
-                recipeImageUrl = recipeImage!.data[0].url;
+                recipeImageUrl = recipeImage!.data[0]!.url;
 
 
                 //get the recipe
@@ -111,7 +111,7 @@ else
 
                 responseRecipe.EnsureSuccessStatusCode();
 
-                recipe = await responseRecipe.Content.ReadFromJsonAsync<Recipe>();
+                recipe = (await responseRecipe.Content.ReadFromJsonAsync<Recipe>())!;
 
                 loaded = true;
                 StateHasChanged();
