--- a/Client/Pages/CreateMeal.razor
+++ b/Client/Pages/CreateMeal.razor
@@ -71,7 +71,7 @@
             </EditForm>
         </div>
         <div class="col-12 col-lg-6">
-            <p class="pe-5 me-lg-5 ms-lg-5 ps-5 mt-lg-5 pt-lg-2 text-left"><span class="fw-bold text-pink">PRO TIP: </span>AI-generated recipes are delicious and inventive.  Use your imagination and try something new!</p>
+            <p class="pe-5 me-lg-5 ms-lg-5 ps-5 mt-lg-5 pt-lg-2 text-left"><span class="fw-bold text-pink">PRO TIP: </span>AI-generated recipes are delightful and inventive.  Use your imagination to try something new!</p>
             <div class="text-center ">
                 <img class="" src="/images/ChefByteTalkingHead.png" width="150" />
             </div>
