removed Gluten-free button until API call issues resolved

--- a/Client/Pages/CreateMeal.razor
+++ b/Client/Pages/CreateMeal.razor
@@ -66,9 +66,9 @@
                         <button class="btn btn-primary rounded" @onclick="HandleSubmit">
                             Make A Meal
                         </button>
-                        <button class="btn btn-primary rounded ms-2" @onclick="GlutenFreeHandleSubmit">
+                       @* <button class="btn btn-primary rounded ms-2" @onclick="GlutenFreeHandleSubmit">
                             Gluten-Free
-                        </button>
+                        </button>*@
                     </div>
                 </div>
             </EditForm>
@@ -151,10 +151,10 @@
     }
 
     <!--GLUTEN-FREE SUBMIT METHOD-->
-    private void GlutenFreeHandleSubmit()
+    private void GlutenFreeHandleSubmit() 
     {
         rState.MealTime = meal.mealtime;
         rState.Ingredients = ingredients;
-        navigationManager.NavigateTo("/glutenfreemealideas");
+        navigationManager.NavigateTo("/mealideas");
     }
 }
