--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -20,7 +20,7 @@
                 <h1 class="text-light text-center mt-3">Make meals epic with<br />your <span class="text-pink">AI-powered</span> chef</h1>
             </div>
             <div class="text-center mt-4">
-                <a href="/createmeal" class="btn btn-outline-light btn-lg">Get Started</a>
+                <a href="/createmeal" class="btn btn-outline-light">GET STARTED</a>
             </div>
 
         </main> 
