--- a/Client/Pages/CreateMeal.razor
+++ b/Client/Pages/CreateMeal.razor
@@ -66,7 +66,7 @@
                         <button class="btn btn-primary rounded" @onclick="HandleSubmit">
                             Make A Meal
                         </button>
-                       @* <button class="btn btn-primary rounded ms-2" @onclick="GlutenFreeHandleSubmit">
+                        @*<button class="btn btn-primary rounded ms-2" @onclick="GlutenFreeHandleSubmit">
                             Gluten-Free
                         </button>*@
                     </div>
@@ -155,6 +155,6 @@
     {
         rState.MealTime = meal.mealtime;
         rState.Ingredients = ingredients;
-        navigationManager.NavigateTo("/mealideas");
+        navigationManager.NavigateTo("/glutenfreemealideas");
     }
 }
