footer text updated to dark purple

--- a/Client/Shared/TopNavLayout.razor
+++ b/Client/Shared/TopNavLayout.razor
@@ -4,8 +4,8 @@
 <main>
     @Body
 </main>
-<footer class="p-3 text-center text-dark bg-purple mt-3 d-print-none">
-    &copy: 2023 Steve Szymanski
+<footer class="p-3 text-center text-dark bg-purple text-purple mt-3 d-print-none">
+    &copy 2023 Steve Szymanski
 </footer>
 
 @code {
