--- a/Client/Pages/CreateMeal.razor
+++ b/Client/Pages/CreateMeal.razor
@@ -14,7 +14,7 @@
             <EditForm EditContext="@editcontext">
                 <div class="row gy-7">
                     <div class="col-12">
-                        <label class="form-label">Meal Time</label>
+                        <label class="form-label text-purple">Meal Time</label>
                         <InputSelect @bind-Value="meal.mealtime" class="form-select">
                             <option value="Breakfast">Breakfast</option>
                             <option value="Lunch">Lunch</option>
@@ -23,7 +23,7 @@
                         </InputSelect>
                     </div>
                     <div class="col-12">
-                        <label class="form-label mt-4">Ingredient</label>
+                        <label class="form-label mt-4 text-purple">Ingredient</label>
                         <InputText placeholder="Add Ingredient"
                                    maxlength="30"
                                    @bind-Value="meal.ingredient"
@@ -32,8 +32,8 @@
                         </InputText>
                     </div>
                     <div class="col-12 mt-4">
-                        <button class="btn btn-outline-dangerous" @onclick="AddIngredient">Add</button>
-                        <button class="btn btn-dangerous text-purple" @onclick="RemoveAll">Clear Ingredient List</button>
+                        <button class="btn btn-dangerous" @onclick="AddIngredient">Add</button>
+                        <button class="btn btn-outline-dangerous" @onclick="RemoveAll">Clear Ingredient List</button>
 
                     </div>
                     <div class="col-12 mt-3">
