--- a/Client/Pages/CreateMeal.razor
+++ b/Client/Pages/CreateMeal.razor
@@ -32,7 +32,7 @@
                         </InputText>
                     </div>
                     <div class="col-12 mt-4">
-                        <button class="btn btn-dangerous" @onclick="AddIngredient">Add</button>
+                        <button class="btn-dangerous btn" @onclick="AddIngredient">Add</button>
                         <button class="btn btn-outline-dangerous" @onclick="RemoveAll">Clear Ingredient List</button>
 
                     </div>
