--- a/Client/Shared/TopNavLayout.razor
+++ b/Client/Shared/TopNavLayout.razor
@@ -4,8 +4,8 @@
 <main>
     @Body
 </main>
-<footer class="p-3 text-center bg-purple text-purple mt-3 d-print-none">
-    &copy 2023 Steve Szymanski
+<footer class="p-3 text-center bg-purple mt-3 d-print-none">
+    <a class="text-purple" href="https://steveszymanski.com/" target="_blank">&copy 2023 Steve Szymanski</a>
 </footer>
 
 @code {
