--- a/Client/Pages/Index.razor.css
+++ b/Client/Pages/Index.razor.css
@@ -13,7 +13,7 @@
     font-size: 1.2rem;
 }
 
-@media (max-width: 800px) {
+/*@media (max-width: 800px) {
     .page {
         background-image: url(images/cbMobileBg.PNG);
         background-repeat: no-repeat;
@@ -25,7 +25,7 @@
         height: 110%;
         font-size: 1.2rem;
     }
-}
+}*/
     
 .pagestyle {
     display: flex;
@@ -63,6 +63,26 @@ footer {
 
 .btn-outline-light:hover {
     color: #43025B;
+}
+
+.modal-bg {
+    background-image: url(images/ChefByteWhiteBackground.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    color: var(--bs-primary);
+    font-size: 1.2rem;
+}
+
+.modal-style {
+    display: flex;
+    flex-direction: column;
+    backdrop-filter: blur(2px) brightness(100%);
+    height: 100%;
 }
 
 .small-footer-text {
