--- a/Client/Pages/Index.razor.css
+++ b/Client/Pages/Index.razor.css
@@ -1,6 +1,4 @@
-﻿
-
-.page{
+﻿.page{
     background-image: url(images/ChefGPTBgPurplePink.png);
     background-repeat: no-repeat;
     background-position: center;
@@ -13,7 +11,7 @@
     font-size: 1.2rem;
 }
 
-/*@media (max-width: 800px) {
+@media (max-width: 800px) {
     .page {
         background-image: url(images/cbMobileBg.PNG);
         background-repeat: no-repeat;
@@ -25,7 +23,7 @@
         height: 110%;
         font-size: 1.2rem;
     }
-}*/
+}
     
 .pagestyle {
     display: flex;
@@ -63,26 +61,6 @@ footer {
 
 .btn-outline-light:hover {
     color: #43025B;
-}
-
-.modal-bg {
-    background-image: url(images/ChefByteWhiteBackground.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    color: var(--bs-primary);
-    font-size: 1.2rem;
-}
-
-.modal-style {
-    display: flex;
-    flex-direction: column;
-    backdrop-filter: blur(2px) brightness(100%);
-    height: 100%;
 }
 
 .small-footer-text {
