--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -8,8 +8,8 @@
 <div class="page">
     <div class="pagestyle">
         <nav class="row align-items-center">
-            <div class="col text-end me-3 mt-3">
-                <a href="https://steveszymanski.com/" target="_blank">About</a>
+            <div class="col text-end text-light me-3 mt-3">
+                <a class="text-light" href="https://steveszymanski.com/" target="_blank">About</a>
             </div>
         </nav>
         <main class="landingPage">
@@ -27,7 +27,7 @@
         <footer class="text-center text-light">
             <div class="row">
                 <div class="col-lg"></div>
-                <div class="col opacity-75 small-footer-text mt-1">
+                <div class="col small-footer-text mt-2">
                     &copy; Steve Szymanski 2023
                 </div>
                 <div class="col text-end text-light me-2">
