--- a/Client/wwwroot/css/app.css
+++ b/Client/wwwroot/css/app.css
@@ -213,3 +213,27 @@ a, .btn-link {
         right: 0.75rem;
         top: 0.5rem;
     }
+
+.hidden-from-top {
+    opacity: 0;
+    filter: blur(2px);
+    transform: translateY(25%);
+    transition: 1s;
+    transition-delay: 1s;
+}
+
+.hidden-from-left {
+    opacity: 0;
+    filter: blur(2px);
+    transform: translateX(-25%);
+    transition: 1s;
+    transition-delay: 1s;
+}
+
+.hidden-from-right {
+    opacity: 0;
+    filter: blur(2px);
+    transform: translateX(25%);
+    transition: 1s;
+    transition-delay: 1s;
+}
