JS added for animations

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -3,7 +3,7 @@
 <!--OVERRIDES MAIN LAYOUT PROVIDED-->
 @layout LandingPageLayout
 
-<PageTitle>Chef GPT - AI Magic Meals</PageTitle>
+<PageTitle>Chef Byte - Your AI-Powered Chef </PageTitle>
 
 <div class="page">
     <div class="pagestyle">
