--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -14,13 +14,13 @@
         </nav>
         <main class="landingPage">
             <div class="text-center ms-2 ">
-                <img class="hidden-from-top" src="images/ChefByteWhiteCropped.png" height="340" />
+                <img class="" src="images/ChefByteWhiteCropped.png" height="340" />
             </div>
             <div>
-                <h1 class="text-light text-center mt-3 hidden-from-left">Your <span class="text-pink">AI-powered</span> chef</h1>
+                <h1 class="text-light text-center mt-3">Your <span class="text-pink">AI-powered</span> chef</h1>
             </div>
             <div class="text-center mt-4">
-                <a href="/createmeal" class="btn btn-outline-light hidden-from-right">GET STARTED</a>
+                <a href="/createmeal" class="btn btn-outline-light">GET STARTED</a>
             </div>
 
         </main> 
