--- a/Client/wwwroot/css/app.css
+++ b/Client/wwwroot/css/app.css
@@ -214,7 +214,7 @@ a, .btn-link {
         top: 0.5rem;
     }
 
-.hidden-from-top {
+/*.hidden-from-top {
     opacity: 0;
     filter: blur(2px);
     transform: translateY(25%);
@@ -236,4 +236,4 @@ a, .btn-link {
     transform: translateX(25%);
     transition: 1s;
     transition-delay: 1s;
-}
+}*/
