removed img from print screen

--- a/Client/Pages/MealRecipe.razor
+++ b/Client/Pages/MealRecipe.razor
@@ -13,7 +13,7 @@
     <div class="container mt-5 h-100">
         <div class="d-flex flex-column flex-lg-row justify-content-start">
             <div class="text-center text-lg-start mb-3">
-                <img src="@recipeImageUrl" class="rounded-3 recipeImage" />
+                <img src="@recipeImageUrl" class="rounded-3 recipeImage d-print-none" />
             </div>
             <div class="flex-grow-1 px-5">
                 <h1 class="fw-bold">@recipe?.title</h1>
