--- a/Client/Shared/TopNavMenu.razor
+++ b/Client/Shared/TopNavMenu.razor
@@ -9,7 +9,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <NavLink class="nav-link" href="createMeal">
-                        <i class="bi bi-magic text-purple" aria-hidden="true"></i> <span class="text-purple">Create Meal</span>
+                        <i class="bi bi-magic text-purple" aria-hidden="true"> <span class="text-purple">Create Meal</span></i>
                     </NavLink>
                 </li>
             </ul>
