--- a/Client/Pages/CreateMeal.razor
+++ b/Client/Pages/CreateMeal.razor
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                     <div class="col-">
-                        <button class="btn btn-primary rounded" type="button" @onclick="HandleSubmit">
+                        <button class="btn btn-primary rounded" type="Submit">
                             Make A Meal
                         </button>
                         @*<button class="btn btn-primary rounded ms-2" @onclick="GlutenFreeHandleSubmit">
