--- a/Client/Pages/CreateMeal.razor
+++ b/Client/Pages/CreateMeal.razor
@@ -63,12 +63,12 @@
                         </div>
                     </div>
                     <div class="col-">
-                        <button class="btn-primary rounded" @onclick="HandleSubmit">
+                        <button class="btn btn-primary rounded" @onclick="HandleSubmit">
                             Make A Meal
                         </button>
-                        @*<button class="btn btn-primary rounded ms-2" @onclick="GlutenFreeHandleSubmit">
+                        <button class="btn btn-primary rounded ms-2" @onclick="GlutenFreeHandleSubmit">
                             Gluten-Free
-                        </button>*@
+                        </button>
                     </div>
                 </div>
             </EditForm>
